se suben archivos

--- a/tercer trimestre/flask/mi pagina/templates/formulario.html
+++ b/tercer trimestre/flask/mi pagina/templates/formulario.html
@@ -95,7 +95,7 @@
         <h1>Contactanos</h1>
     </header>
     <!-- boton de regresar al menu :) -->
-    <nav style="text-align:center; margin:20px; border:solid white;">
+    <nav style="text-align:center; margin:20px;">
         <a href="/" style="color:#ff0000; text-decoration:none; font-weight:bold;">
             Regresar al menu
         </a>
@@ -105,7 +105,7 @@
             <h3>CONTACTANOS</h3>
 
             <p>
-                Ingresa tu Nombre:
+                Ingresa tus Nombres:
                 <input type="text" name="nombres">
             </p>
 
